--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@aws-sdk/client-comprehend": "^3.47.0",
     "@aws-sdk/client-kinesis": "^3.47.1",
     "@aws-sdk/client-s3": "^3.50.0",
+    "@aws-sdk/client-ssm": "^3.50.0",
     "@aws-sdk/client-sts": "^3.49.0",
     "@aws-sdk/client-translate": "^3.47.0",
     "@aws-sdk/credential-provider-node": "^3.48.0",
@@ -66,6 +67,7 @@
     "@aws-sdk/signature-v4": "^3.47.2",
     "@types/aws-lambda": "^8.10.92",
     "aws-cdk-lib": "^2.12.0",
+    "axios": "^0.25.0",
     "bluebird": "^3.7.2",
     "constructs": "^10.0.5",
     "node-html-parser": "*",
