--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "deploy": "npx projen deploy",
     "destroy": "npx projen destroy",
     "diff": "npx projen diff",
+    "eject": "npx projen eject",
     "eslint": "npx projen eslint",
     "package": "npx projen package",
     "post-compile": "npx projen post-compile",
+    "post-upgrade": "npx projen post-upgrade",
     "pre-compile": "npx projen pre-compile",
     "synth": "npx projen synth",
     "synth:silent": "npx projen synth:silent",
@@ -25,53 +27,49 @@
   },
   "devDependencies": {
     "@types/bluebird": "^3.5.36",
-    "@types/cfn-response": "^1.0.5",
     "@types/jest": "^27.4.0",
     "@types/log4js": "^2.3.5",
     "@types/node": "^12",
     "@typescript-eslint/eslint-plugin": "^5",
     "@typescript-eslint/parser": "^5",
     "aws-cdk": "^2.12.0",
-    "esbuild": "^0.14.11",
+    "esbuild": "^0.14.21",
     "eslint": "^8",
     "eslint-import-resolver-node": "^0.3.6",
     "eslint-import-resolver-typescript": "^2.5.0",
     "eslint-plugin-import": "^2.25.4",
-    "jest": "^27.4.7",
+    "jest": "^27.5.1",
     "jest-junit": "^13",
     "json-schema": "^0.4.0",
     "npm-check-updates": "^12",
-    "projen": "^0.50.20",
-    "ts-jest": "^27.1.2",
+    "projen": "^0.52.28",
+    "ts-jest": "^27.1.3",
     "ts-node": "^9",
-    "typescript": "^4.5.4"
+    "typescript": "^4.5.5"
   },
   "dependencies": {
-    "@aws-cdk/aws-kinesisfirehose-alpha": "^2.10.0-alpha.0",
-    "@aws-cdk/aws-kinesisfirehose-destinations-alpha": "^2.10.0-alpha.0",
     "@aws-crypto/sha256-js": "^2.0.1",
-    "@aws-lambda-powertools/logger": "^0.3.1",
+    "@aws-lambda-powertools/logger": "^0.5.1",
     "@aws-lambda-powertools/metrics": "^0.5.1",
     "@aws-lambda-powertools/tracer": "^0.5.1",
-    "@aws-sdk/client-cognito-identity": "^3.49.0",
-    "@aws-sdk/client-cognito-identity-provider": "^3.49.0",
-    "@aws-sdk/client-comprehend": "^3.47.0",
-    "@aws-sdk/client-kinesis": "^3.47.1",
-    "@aws-sdk/client-s3": "^3.50.0",
-    "@aws-sdk/client-ssm": "^3.50.0",
-    "@aws-sdk/client-sts": "^3.49.0",
-    "@aws-sdk/client-translate": "^3.47.0",
-    "@aws-sdk/credential-provider-node": "^3.48.0",
-    "@aws-sdk/node-http-handler": "^3.47.2",
-    "@aws-sdk/protocol-http": "^3.47.2",
-    "@aws-sdk/signature-v4": "^3.47.2",
+    "@aws-sdk/client-cognito-identity": "^3.51.0",
+    "@aws-sdk/client-cognito-identity-provider": "^3.51.0",
+    "@aws-sdk/client-comprehend": "^3.51.0",
+    "@aws-sdk/client-kinesis": "^3.51.0",
+    "@aws-sdk/client-s3": "^3.51.0",
+    "@aws-sdk/client-ssm": "^3.51.0",
+    "@aws-sdk/client-sts": "^3.51.0",
+    "@aws-sdk/client-translate": "^3.51.0",
+    "@aws-sdk/credential-provider-node": "^3.51.0",
+    "@aws-sdk/node-http-handler": "^3.50.0",
+    "@aws-sdk/protocol-http": "^3.50.0",
+    "@aws-sdk/signature-v4": "^3.50.0",
     "@types/aws-lambda": "^8.10.92",
     "aws-cdk-lib": "^2.12.0",
-    "axios": "^0.25.0",
     "bluebird": "^3.7.2",
     "constructs": "^10.0.5",
     "node-html-parser": "*",
-    "twitter-api-v2": "^1.9.1",
+    "twitter-api-v2": "^1.10.3",
     "yaml": "^1.10.2"
   },
   "license": "Apache-2.0",
@@ -87,6 +85,7 @@
       "json",
       "lcov",
       "clover",
+      "cobertura",
       "text"
     ],
     "coverageDirectory": "coverage",
