--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "@types/aws-lambda": "^8.10.92",
     "aws-cdk-lib": "^2.12.0",
     "bluebird": "^3.7.2",
+    "cdk-ecr-deployment": "^2.1.3",
     "constructs": "^10.0.5",
     "node-html-parser": "*",
     "twitter-api-v2": "^1.10.3",
