--- a/src/containers/log-router/Dockerfile
+++ b/src/containers/log-router/Dockerfile
@@ -1,2 +1,5 @@
-FROM public.ecr.aws/aws-observability/aws-for-fluent-bit:2.21.6
+FROM public.ecr.aws/aws-observability/aws-for-fluent-bit:2.22.0
+
+RUN yum remove -y vim
+
 ADD extra.conf /fluent-bit/etc/
