fix: change to vim-minimal

--- a/src/containers/log-router/Dockerfile
+++ b/src/containers/log-router/Dockerfile
@@ -1,5 +1,5 @@
 FROM public.ecr.aws/aws-observability/aws-for-fluent-bit:2.22.0
 
-RUN yum remove -y vim
+RUN yum remove -y vim-minimal
 
 ADD extra.conf /fluent-bit/etc/
