--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
   },
   "dependencies": {
     "@aws-crypto/sha256-js": "^2.0.1",
+    "@aws-lambda-powertools/commons": "^0.5.1",
     "@aws-lambda-powertools/logger": "^0.5.1",
     "@aws-lambda-powertools/metrics": "^0.5.1",
     "@aws-lambda-powertools/tracer": "^0.5.1",
