--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,6 +1,7 @@
 {
-    "image": "public.ecr.aws/mats/devcontainer-for-aws:latest",
+    "image": "ghcr.io/mats16/devcontainer-for-aws:latest-alpine",
     "extensions": [
-        "dbaeumer.vscode-eslint"
+        "dbaeumer.vscode-eslint",
+        "mhutchie.git-graph"
     ]
 }
