--- a/src/containers/log-router/Dockerfile
+++ b/src/containers/log-router/Dockerfile
@@ -1,5 +1,3 @@
-FROM public.ecr.aws/aws-observability/aws-for-fluent-bit:2.22.0
-
-RUN yum remove -y vim-minimal
+FROM --platform=linux/arm64 public.ecr.aws/aws-observability/aws-for-fluent-bit:2.22.0
 
 ADD extra.conf /fluent-bit/etc/
