--- a/src/containers/log-router/Dockerfile
+++ b/src/containers/log-router/Dockerfile
@@ -1,3 +1,3 @@
-FROM --platform=linux/arm64 public.ecr.aws/aws-observability/aws-for-fluent-bit:2.22.0
+FROM --platform=linux/amd64 public.ecr.aws/aws-observability/aws-for-fluent-bit:2.22.0
 
 ADD extra.conf /fluent-bit/etc/
