--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,5 +1,8 @@
 {
     "image": "ghcr.io/mats16/devcontainer-for-aws:latest",
+    "mounts": [
+        "source=/var/run/docker.sock,target=/var/run/docker.sock,type=bind"
+    ],
     "extensions": [
         "dbaeumer.vscode-eslint",
         "mhutchie.git-graph"
