--- a/src/containers/twitter-streaming-reader/Dockerfile
+++ b/src/containers/twitter-streaming-reader/Dockerfile
@@ -1,27 +1,27 @@
-FROM public.ecr.aws/docker/library/node:16-alpine as builder
+FROM public.ecr.aws/docker/library/node:18-alpine as builder
 
+USER node
 WORKDIR /home/node
 
-COPY ["package.json", "./"]
-
+COPY package.json ./
 RUN npm install
 
-COPY ["tsconfig.json", "./"]
-
+COPY tsconfig.json ./
 COPY src src
 
 RUN npm run build
 
-FROM public.ecr.aws/docker/library/node:16-alpine
+FROM public.ecr.aws/docker/library/node:18-alpine
 
 RUN apk add --no-cache tini
 ENTRYPOINT ["/sbin/tini", "--"]
 
 USER node
-
 WORKDIR /home/node
 
-COPY --from=builder /home/node/node_modules/ ./node_modules
+COPY package.json ./
+RUN npm install --production --cache /tmp/empty-cache && rm -rf /tmp/empty-cache
+
 COPY --from=builder /home/node/lib/ ./lib
 
 CMD [ "node", "./lib/app.js" ]
