--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "@types/node": "^12",
     "@typescript-eslint/eslint-plugin": "^5",
     "@typescript-eslint/parser": "^5",
-    "aws-cdk": "^2.22.0",
+    "aws-cdk": "^2.23.0",
     "esbuild": "^0.14.21",
     "eslint": "^8",
     "eslint-import-resolver-node": "^0.3.6",
@@ -66,13 +66,13 @@
     "@aws-sdk/protocol-http": "^3.50.0",
     "@aws-sdk/signature-v4": "^3.50.0",
     "@types/aws-lambda": "^8.10.92",
-    "aws-cdk-lib": "^2.22.0",
-    "bluebird": "^3.7.2",
+    "aws-cdk-lib": "^2.23.0",
+    "bluebird": "3.7.2",
     "cdk-ecr-deployment": "^2.1.3",
     "constructs": "^10.0.5",
-    "node-html-parser": "*",
-    "twitter-api-v2": "^1.10.3",
-    "yaml": "^1.10.2"
+    "node-html-parser": "5.3.3",
+    "twitter-api-v2": "1.12.0",
+    "yaml": "2.0.1"
   },
   "license": "Apache-2.0",
   "version": "0.0.0",
