--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "@types/node": "^12",
     "@typescript-eslint/eslint-plugin": "^5",
     "@typescript-eslint/parser": "^5",
-    "aws-cdk": "^2.23.0",
+    "aws-cdk": "^2.24.1",
     "esbuild": "^0.14.21",
     "eslint": "^8",
     "eslint-import-resolver-node": "^0.3.6",
@@ -56,6 +56,7 @@
     "@aws-sdk/client-cognito-identity": "^3.51.0",
     "@aws-sdk/client-cognito-identity-provider": "^3.51.0",
     "@aws-sdk/client-comprehend": "^3.51.0",
+    "@aws-sdk/client-eventbridge": "^3.88.0",
     "@aws-sdk/client-kinesis": "^3.51.0",
     "@aws-sdk/client-s3": "^3.51.0",
     "@aws-sdk/client-ssm": "^3.51.0",
@@ -66,7 +67,7 @@
     "@aws-sdk/protocol-http": "^3.50.0",
     "@aws-sdk/signature-v4": "^3.50.0",
     "@types/aws-lambda": "^8.10.92",
-    "aws-cdk-lib": "^2.23.0",
+    "aws-cdk-lib": "^2.24.1",
     "bluebird": "3.7.2",
     "cdk-ecr-deployment": "^2.1.3",
     "constructs": "^10.0.5",
