--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "typescript": "^4.5.5"
   },
   "dependencies": {
+    "@aws-cdk/aws-apprunner-alpha": "^2.24.1-alpha.0",
     "@aws-crypto/sha256-js": "^2.0.1",
     "@aws-lambda-powertools/commons": "^0.5.1",
     "@aws-lambda-powertools/logger": "^0.5.1",
