--- a/src/containers/proxy/Dockerfile
+++ b/src/containers/proxy/Dockerfile
@@ -1,3 +1,5 @@
 FROM public.ecr.aws/nginx/nginx:1.21-alpine
 
 ADD default.conf.template /etc/nginx/templates/default.conf.template
+
+ENV NAME_SERVERS='1.1.1.1 1.0.0.1'
