--- a/src/containers/proxy/default.conf.template
+++ b/src/containers/proxy/default.conf.template
@@ -1,26 +1,26 @@
 # https://gallery.ecr.aws/nginx/nginx
 # https://docs.aws.amazon.com/ja_jp/opensearch-service/latest/developerguide/dashboards.html#dashboards-access
 
-resolver 1.1.1.1 1.0.0.1 valid=10s;
+server_tokens off;
+resolver ${NAME_SERVERS};
 
 server {
     listen 8080;
     server_name $host;
-    rewrite ^/$ https://$host/_dashboards redirect;
+    rewrite ^/$ https://$host/_dashboards/ redirect;
 
-    set $domain_endpoint ${DOMAIN_ENDPOINT};
+    set $dashboards_host ${DASHBOARDS_HOST};
     set $cognito_host ${COGNITO_HOST};
 
-    location /_dashboards {
+    location ~ ^/_dashboards/ {
         # Forward requests to Dashboards
-        proxy_pass https://$domain_endpoint/_dashboards;
+        proxy_pass https://$dashboards_host;
 
         # Handle redirects to Cognito
         proxy_redirect https://$cognito_host https://$host;
 
-        # Update cookie domain and path
-        proxy_cookie_domain $domain_endpoint $host;
-        proxy_cookie_path / /_dashboards/;
+        # Update cookie domain
+        proxy_cookie_domain $dashboards_host $host;
 
         # Response buffer settings
         proxy_buffer_size 128k;
@@ -33,7 +33,7 @@ server {
         proxy_pass https://$cognito_host;
 
         # Handle redirects to Dashboards
-        proxy_redirect https://$domain_endpoint https://$host;
+        proxy_redirect https://$dashboards_host https://$host;
 
         # Handle redirects to Cognito
         proxy_redirect https://$cognito_host https://$host;
