--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@aws-sdk/client-comprehend": "^3.51.0",
     "@aws-sdk/client-eventbridge": "^3.88.0",
     "@aws-sdk/client-kinesis": "^3.51.0",
+    "@aws-sdk/client-lambda": "^3.95.0",
     "@aws-sdk/client-s3": "^3.51.0",
     "@aws-sdk/client-ssm": "^3.51.0",
     "@aws-sdk/client-sts": "^3.51.0",
@@ -66,6 +67,7 @@
     "@aws-sdk/node-http-handler": "^3.50.0",
     "@aws-sdk/protocol-http": "^3.50.0",
     "@aws-sdk/signature-v4": "^3.50.0",
+    "@aws-sdk/util-utf8-node": "^3.55.0",
     "@types/aws-lambda": "^8.10.92",
     "aws-cdk-lib": "^2.25.0",
     "bluebird": "3.7.2",
