add aws-sdk versions

--- a/package.json
+++ b/package.json
@@ -53,21 +53,22 @@
     "@aws-lambda-powertools/logger": "^0.5.1",
     "@aws-lambda-powertools/metrics": "^0.5.1",
     "@aws-lambda-powertools/tracer": "^0.5.1",
-    "@aws-sdk/client-cognito-identity": "^3.51.0",
-    "@aws-sdk/client-cognito-identity-provider": "^3.51.0",
-    "@aws-sdk/client-comprehend": "^3.51.0",
-    "@aws-sdk/client-eventbridge": "^3.88.0",
-    "@aws-sdk/client-kinesis": "^3.51.0",
-    "@aws-sdk/client-lambda": "^3.95.0",
-    "@aws-sdk/client-s3": "^3.51.0",
-    "@aws-sdk/client-ssm": "^3.51.0",
-    "@aws-sdk/client-sts": "^3.51.0",
-    "@aws-sdk/client-translate": "^3.51.0",
-    "@aws-sdk/credential-provider-node": "^3.51.0",
-    "@aws-sdk/node-http-handler": "^3.50.0",
-    "@aws-sdk/protocol-http": "^3.50.0",
-    "@aws-sdk/signature-v4": "^3.50.0",
-    "@aws-sdk/util-utf8-node": "^3.55.0",
+    "@aws-sdk/client-cognito-identity": "^3.100.0",
+    "@aws-sdk/client-cognito-identity-provider": "^3.100.0",
+    "@aws-sdk/client-comprehend": "^3.100.0",
+    "@aws-sdk/client-eventbridge": "^3.100.0",
+    "@aws-sdk/client-kinesis": "^3.100.0",
+    "@aws-sdk/client-lambda": "^3.100.0",
+    "@aws-sdk/client-s3": "^3.100.0",
+    "@aws-sdk/client-sfn": "^3.100.0",
+    "@aws-sdk/client-ssm": "^3.100.0",
+    "@aws-sdk/client-sts": "^3.100.0",
+    "@aws-sdk/client-translate": "^3.100.0",
+    "@aws-sdk/credential-provider-node": "^3.100.0",
+    "@aws-sdk/node-http-handler": "^3.100.0",
+    "@aws-sdk/protocol-http": "^3.100.0",
+    "@aws-sdk/signature-v4": "^3.100.0",
+    "@aws-sdk/util-utf8-node": "^3.100.0",
     "@types/aws-lambda": "^8.10.92",
     "aws-cdk-lib": "^2.25.0",
     "bluebird": "3.7.2",
