--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "projen": "^0.52.28",
     "ts-jest": "^27.1.3",
     "ts-node": "^9",
-    "typescript": "^4.5.5"
+    "typescript": "4.5.5"
   },
   "dependencies": {
     "@aws-crypto/sha256-js": "^2.0.1",
@@ -63,12 +63,11 @@
     "@aws-sdk/client-sfn": "^3.100.0",
     "@aws-sdk/client-ssm": "^3.100.0",
     "@aws-sdk/client-sts": "^3.100.0",
-    "@aws-sdk/client-translate": "^3.100.0",
     "@aws-sdk/credential-provider-node": "^3.100.0",
-    "@aws-sdk/node-http-handler": "^3.100.0",
-    "@aws-sdk/protocol-http": "^3.100.0",
-    "@aws-sdk/signature-v4": "^3.100.0",
-    "@aws-sdk/util-utf8-node": "^3.100.0",
+    "@aws-sdk/node-http-handler": "^3.94.0",
+    "@aws-sdk/protocol-http": "^3.78.0",
+    "@aws-sdk/signature-v4": "^3.78.0",
+    "@aws-sdk/util-utf8-node": "^3.55.0",
     "@types/aws-lambda": "^8.10.92",
     "aws-cdk-lib": "^2.25.0",
     "bluebird": "3.7.2",
