--- a/.projen/tasks.json
+++ b/.projen/tasks.json
@@ -198,25 +198,25 @@
       },
       "steps": [
         {
-          "exec": "npm-check-updates --dep dev --upgrade --target=minor --reject='typescript,bluebird,node-html-parser,twitter-api-v2,yaml,projen'"
+          "exec": "npm-check-updates --dep dev --upgrade --target=minor --reject='typescript,@aws-cdk/aws-apprunner-alpha,bluebird,node-html-parser,twitter-api-v2,yaml,projen'"
         },
         {
-          "exec": "npm-check-updates --dep optional --upgrade --target=minor --reject='typescript,bluebird,node-html-parser,twitter-api-v2,yaml,projen'"
+          "exec": "npm-check-updates --dep optional --upgrade --target=minor --reject='typescript,@aws-cdk/aws-apprunner-alpha,bluebird,node-html-parser,twitter-api-v2,yaml,projen'"
         },
         {
-          "exec": "npm-check-updates --dep peer --upgrade --target=minor --reject='typescript,bluebird,node-html-parser,twitter-api-v2,yaml,projen'"
+          "exec": "npm-check-updates --dep peer --upgrade --target=minor --reject='typescript,@aws-cdk/aws-apprunner-alpha,bluebird,node-html-parser,twitter-api-v2,yaml,projen'"
         },
         {
-          "exec": "npm-check-updates --dep prod --upgrade --target=minor --reject='typescript,bluebird,node-html-parser,twitter-api-v2,yaml,projen'"
+          "exec": "npm-check-updates --dep prod --upgrade --target=minor --reject='typescript,@aws-cdk/aws-apprunner-alpha,bluebird,node-html-parser,twitter-api-v2,yaml,projen'"
         },
         {
-          "exec": "npm-check-updates --dep bundle --upgrade --target=minor --reject='typescript,bluebird,node-html-parser,twitter-api-v2,yaml,projen'"
+          "exec": "npm-check-updates --dep bundle --upgrade --target=minor --reject='typescript,@aws-cdk/aws-apprunner-alpha,bluebird,node-html-parser,twitter-api-v2,yaml,projen'"
         },
         {
           "exec": "yarn install --check-files"
         },
         {
-          "exec": "yarn upgrade @types/bluebird @types/jest @types/log4js @types/node @typescript-eslint/eslint-plugin @typescript-eslint/parser aws-cdk esbuild eslint-import-resolver-node eslint-import-resolver-typescript eslint-plugin-import eslint jest jest-junit json-schema npm-check-updates ts-jest ts-node typescript @aws-crypto/sha256-js @aws-lambda-powertools/commons @aws-lambda-powertools/logger @aws-lambda-powertools/metrics @aws-lambda-powertools/tracer @aws-sdk/client-cognito-identity-provider @aws-sdk/client-cognito-identity @aws-sdk/client-comprehend @aws-sdk/client-eventbridge @aws-sdk/client-kinesis @aws-sdk/client-lambda @aws-sdk/client-s3 @aws-sdk/client-sfn @aws-sdk/client-ssm @aws-sdk/client-sts @aws-sdk/credential-provider-node @aws-sdk/node-http-handler @aws-sdk/protocol-http @aws-sdk/signature-v4 @aws-sdk/util-utf8-node @types/aws-lambda aws-cdk-lib bluebird constructs node-html-parser twitter-api-v2 yaml"
+          "exec": "yarn upgrade @types/bluebird @types/jest @types/log4js @types/node @typescript-eslint/eslint-plugin @typescript-eslint/parser aws-cdk esbuild eslint-import-resolver-node eslint-import-resolver-typescript eslint-plugin-import eslint jest jest-junit json-schema npm-check-updates ts-jest ts-node typescript @aws-cdk/aws-apprunner-alpha @aws-crypto/sha256-js @aws-lambda-powertools/commons @aws-lambda-powertools/logger @aws-lambda-powertools/metrics @aws-lambda-powertools/tracer @aws-sdk/client-cognito-identity-provider @aws-sdk/client-cognito-identity @aws-sdk/client-comprehend @aws-sdk/client-eventbridge @aws-sdk/client-kinesis @aws-sdk/client-lambda @aws-sdk/client-s3 @aws-sdk/client-sfn @aws-sdk/client-ssm @aws-sdk/client-sts @aws-sdk/credential-provider-node @aws-sdk/node-http-handler @aws-sdk/protocol-http @aws-sdk/signature-v4 @aws-sdk/util-utf8-node @types/aws-lambda aws-cdk-lib bluebird constructs node-html-parser twitter-api-v2 yaml"
         },
         {
           "exec": "npx projen"
