--- a/src/containers/proxy/default.conf.template
+++ b/src/containers/proxy/default.conf.template
@@ -33,6 +33,9 @@ server {
         proxy_buffer_size 128k;
         proxy_buffers 4 256k;
         proxy_busy_buffers_size 256k;
+
+        # Timeout settings for Reporting feature
+        proxy_read_timeout 600;
     }
 
     location ~ \/(log|sign|fav|forgot|change|saml|oauth2|confirm) {
