--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "@aws-sdk/client-eventbridge": "^3.100.0",
     "@aws-sdk/client-kinesis": "^3.100.0",
     "@aws-sdk/client-lambda": "^3.100.0",
+    "@aws-sdk/client-opensearch": "^3.100.0",
     "@aws-sdk/client-s3": "^3.100.0",
     "@aws-sdk/client-sfn": "^3.100.0",
     "@aws-sdk/client-ssm": "^3.100.0",
