--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@aws-sdk/client-cognito-identity": "^3.100.0",
     "@aws-sdk/client-cognito-identity-provider": "^3.100.0",
     "@aws-sdk/client-comprehend": "^3.100.0",
+    "@aws-sdk/client-dynamodb": "^3.100.0",
     "@aws-sdk/client-eventbridge": "^3.100.0",
     "@aws-sdk/client-kinesis": "^3.100.0",
     "@aws-sdk/client-lambda": "^3.100.0",
@@ -66,9 +67,11 @@
     "@aws-sdk/client-ssm": "^3.100.0",
     "@aws-sdk/client-sts": "^3.100.0",
     "@aws-sdk/credential-provider-node": "^3.100.0",
+    "@aws-sdk/lib-dynamodb": "^3.113.0",
     "@aws-sdk/node-http-handler": "^3.94.0",
     "@aws-sdk/protocol-http": "^3.78.0",
     "@aws-sdk/signature-v4": "^3.78.0",
+    "@aws-sdk/util-dynamodb": "^3.113.0",
     "@aws-sdk/util-utf8-node": "^3.55.0",
     "@types/aws-lambda": "^8.10.92",
     "aws-cdk-lib": "^2.27.0",
