--- a/src/containers/twitter-streaming-reader/package.json
+++ b/src/containers/twitter-streaming-reader/package.json
@@ -8,12 +8,13 @@
     "build": "./node_modules/typescript/bin/tsc"
   },
   "dependencies": {
+    "fluent-logger": "^3.4.1",
     "log4js": "^6.4.0",
-    "twitter-api-v2": "^1.9.1",
-    "typescript": "^4.5.5"
+    "twitter-api-v2": "^1.9.1"
   },
   "devDependencies": {
     "@types/log4js": "^2.3.5",
-    "@types/node": "^17.0.10"
+    "@types/node": "^17.0.10",
+    "typescript": "^4.5.5"
   }
 }
