--- a/src/containers/twitter-streaming-reader/package.json
+++ b/src/containers/twitter-streaming-reader/package.json
@@ -8,6 +8,9 @@
     "build": "./node_modules/typescript/bin/tsc"
   },
   "dependencies": {
+    "@aws-sdk/client-eventbridge": "^3.118.0",
+    "@aws-sdk/client-sqs": "^3.118.0",
+    "aws-xray-sdk": "^3.3.6",
     "fluent-logger": "^3.4.1",
     "log4js": "^6.4.0",
     "twitter-api-v2": "^1.9.1"
