--- a/package.json
+++ b/package.json
@@ -26,13 +26,14 @@
     "projen": "npx projen"
   },
   "devDependencies": {
+    "@types/aws4": "^1.11.2",
     "@types/bluebird": "^3.5.36",
     "@types/jest": "^27.4.0",
     "@types/log4js": "^2.3.5",
     "@types/node": "^12",
     "@typescript-eslint/eslint-plugin": "^5",
     "@typescript-eslint/parser": "^5",
-    "aws-cdk": "^2.27.0",
+    "aws-cdk": "^2.29.1",
     "esbuild": "^0.14.21",
     "eslint": "^8",
     "eslint-import-resolver-node": "^0.3.6",
@@ -48,7 +49,6 @@
     "typescript": "4.6.4"
   },
   "dependencies": {
-    "@aws-cdk/aws-apprunner-alpha": "2.26.0-alpha.0",
     "@aws-crypto/sha256-js": "^2.0.1",
     "@aws-lambda-powertools/commons": "^0.5.1",
     "@aws-lambda-powertools/logger": "^0.5.1",
@@ -59,6 +59,7 @@
     "@aws-sdk/client-comprehend": "^3.100.0",
     "@aws-sdk/client-dynamodb": "^3.100.0",
     "@aws-sdk/client-eventbridge": "^3.100.0",
+    "@aws-sdk/client-firehose": "^3.100.0",
     "@aws-sdk/client-kinesis": "^3.100.0",
     "@aws-sdk/client-lambda": "^3.100.0",
     "@aws-sdk/client-opensearch": "^3.100.0",
@@ -73,12 +74,15 @@
     "@aws-sdk/signature-v4": "^3.78.0",
     "@aws-sdk/util-dynamodb": "^3.113.0",
     "@aws-sdk/util-utf8-node": "^3.55.0",
+    "@opensearch-project/opensearch": "2.0.0",
     "@types/aws-lambda": "^8.10.92",
-    "aws-cdk-lib": "^2.27.0",
+    "aws-cdk-lib": "^2.29.1",
+    "aws-xray-sdk": "^3.3.6",
+    "aws4": "1.11.0",
     "bluebird": "3.7.2",
     "constructs": "^10.0.5",
     "node-html-parser": "5.3.3",
-    "twitter-api-v2": "1.12.0",
+    "twitter-api-v2": "1.12.2",
     "yaml": "2.0.1"
   },
   "license": "Apache-2.0",
