--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "aws-cdk-lib": "^2.29.1",
     "aws-xray-sdk": "^3.3.6",
     "aws4": "1.11.0",
+    "axios": "0.27.2",
     "bluebird": "3.7.2",
     "constructs": "^10.0.5",
     "node-html-parser": "5.3.3",
