--- a/src/containers/twitter-streaming-reader/package.json
+++ b/src/containers/twitter-streaming-reader/package.json
@@ -8,17 +8,25 @@
     "build": "./node_modules/typescript/bin/tsc"
   },
   "dependencies": {
-    "@aws-sdk/client-eventbridge": "^3.118.0",
-    "@aws-sdk/client-sqs": "^3.118.0",
+    "@aws-sdk/client-eventbridge": "~3.118.1",
+    "@aws-sdk/client-sqs": "~3.118.1",
+    "@opentelemetry/api": "^1.1.0",
+    "@opentelemetry/exporter-trace-otlp-http": "^0.29.2",
+    "@opentelemetry/id-generator-aws-xray": "^1.1.0",
+    "@opentelemetry/instrumentation": "^0.29.2",
+    "@opentelemetry/instrumentation-aws-sdk": "^0.8.0",
+    "@opentelemetry/propagator-aws-xray": "^1.1.0",
+    "@opentelemetry/resources": "^1.3.1",
+    "@opentelemetry/sdk-trace-base": "^1.3.1",
+    "@opentelemetry/sdk-trace-node": "^1.3.1",
+    "@opentelemetry/semantic-conventions": "^1.3.1",
     "aws-xray-sdk": "^3.3.6",
     "axios": "^0.27.2",
-    "fluent-logger": "^3.4.1",
-    "log4js": "^6.4.0",
+    "log4js": "^6.5.2",
     "twitter-api-v2": "^1.9.1"
   },
   "devDependencies": {
-    "@types/log4js": "^2.3.5",
-    "@types/node": "^17.0.10",
+    "@types/node": "^18.0.0",
     "typescript": "^4.5.5"
   }
 }
