--- a/src/containers/twitter-streaming-reader/package.json
+++ b/src/containers/twitter-streaming-reader/package.json
@@ -1,6 +1,6 @@
 {
   "name": "twitter-streaming-reader",
-  "version": "2.0.0",
+  "version": "2.1.0",
   "author": "Kazuki Matsuda",
   "private": true,
   "scripts": {
@@ -8,8 +8,8 @@
     "build": "./node_modules/typescript/bin/tsc"
   },
   "dependencies": {
-    "@aws-sdk/client-eventbridge": "~3.118.1",
-    "@aws-sdk/client-sqs": "~3.118.1",
+    "@aws-sdk/client-eventbridge": "^3.121.0",
+    "@aws-sdk/client-sqs": "^3.121.0",
     "@opentelemetry/api": "^1.1.0",
     "@opentelemetry/exporter-trace-otlp-http": "^0.29.2",
     "@opentelemetry/id-generator-aws-xray": "^1.1.0",
@@ -20,10 +20,8 @@
     "@opentelemetry/sdk-trace-base": "^1.3.1",
     "@opentelemetry/sdk-trace-node": "^1.3.1",
     "@opentelemetry/semantic-conventions": "^1.3.1",
-    "aws-xray-sdk": "^3.3.6",
-    "axios": "^0.27.2",
     "log4js": "^6.5.2",
-    "twitter-api-v2": "^1.9.1"
+    "twitter-api-v2": "^1.12.3"
   },
   "devDependencies": {
     "@types/node": "^18.0.0",
