--- a/package.json
+++ b/package.json
@@ -54,20 +54,20 @@
     "@aws-lambda-powertools/logger": "^0.5.1",
     "@aws-lambda-powertools/metrics": "^0.5.1",
     "@aws-lambda-powertools/tracer": "^0.5.1",
-    "@aws-sdk/client-cognito-identity": "^3.100.0",
-    "@aws-sdk/client-cognito-identity-provider": "^3.100.0",
-    "@aws-sdk/client-comprehend": "^3.100.0",
-    "@aws-sdk/client-dynamodb": "^3.100.0",
-    "@aws-sdk/client-eventbridge": "^3.100.0",
-    "@aws-sdk/client-firehose": "^3.100.0",
-    "@aws-sdk/client-kinesis": "^3.100.0",
-    "@aws-sdk/client-lambda": "^3.100.0",
-    "@aws-sdk/client-opensearch": "^3.100.0",
-    "@aws-sdk/client-s3": "^3.100.0",
-    "@aws-sdk/client-sfn": "^3.100.0",
-    "@aws-sdk/client-ssm": "^3.100.0",
-    "@aws-sdk/client-sts": "^3.100.0",
-    "@aws-sdk/credential-provider-node": "^3.100.0",
+    "@aws-sdk/client-cognito-identity": "^3.121.0",
+    "@aws-sdk/client-cognito-identity-provider": "^3.121.0",
+    "@aws-sdk/client-comprehend": "^3.121.0",
+    "@aws-sdk/client-dynamodb": "^3.121.0",
+    "@aws-sdk/client-eventbridge": "^3.121.0",
+    "@aws-sdk/client-firehose": "^3.121.0",
+    "@aws-sdk/client-kinesis": "^3.121.0",
+    "@aws-sdk/client-lambda": "^3.121.0",
+    "@aws-sdk/client-opensearch": "^3.121.0",
+    "@aws-sdk/client-s3": "^3.121.0",
+    "@aws-sdk/client-sfn": "^3.121.0",
+    "@aws-sdk/client-ssm": "^3.121.0",
+    "@aws-sdk/client-sts": "^3.121.0",
+    "@aws-sdk/credential-provider-node": "^3.121.0",
     "@aws-sdk/lib-dynamodb": "^3.113.0",
     "@aws-sdk/node-http-handler": "^3.94.0",
     "@aws-sdk/protocol-http": "^3.78.0",
@@ -75,6 +75,21 @@
     "@aws-sdk/util-dynamodb": "^3.113.0",
     "@aws-sdk/util-utf8-node": "^3.55.0",
     "@opensearch-project/opensearch": "2.0.0",
+    "@opentelemetry/api": "^1.1.0",
+    "@opentelemetry/core": "^1.4.0",
+    "@opentelemetry/exporter-trace-otlp-http": "^0.30.0",
+    "@opentelemetry/exporter-trace-otlp-proto": "^0.30.0",
+    "@opentelemetry/id-generator-aws-xray": "^1.1.0",
+    "@opentelemetry/instrumentation": "^0.30.0",
+    "@opentelemetry/instrumentation-aws-lambda": "^0.32.0",
+    "@opentelemetry/instrumentation-aws-sdk": "^0.8.0",
+    "@opentelemetry/instrumentation-http": "^0.30.0",
+    "@opentelemetry/propagator-aws-xray": "^1.1.0",
+    "@opentelemetry/resource-detector-aws": "^1.1.1",
+    "@opentelemetry/resources": "^1.4.0",
+    "@opentelemetry/sdk-trace-base": "^1.4.0",
+    "@opentelemetry/sdk-trace-node": "^1.4.0",
+    "@opentelemetry/semantic-conventions": "^1.4.0",
     "@types/aws-lambda": "^8.10.92",
     "aws-cdk-lib": "^2.29.1",
     "aws-xray-sdk": "^3.3.6",
@@ -83,7 +98,7 @@
     "bluebird": "3.7.2",
     "constructs": "^10.0.5",
     "node-html-parser": "5.3.3",
-    "twitter-api-v2": "1.12.2",
+    "twitter-api-v2": "1.12.3",
     "yaml": "2.0.1"
   },
   "license": "Apache-2.0",
